Added Filip Roman

--- a/config/organization_members.yaml
+++ b/config/organization_members.yaml
@@ -215,6 +215,7 @@ orgs:
       - rnetser
       - RobGeada
       - robotmaxtron
+      - RomanFilip
       - romeokienzler
       - rpancham
       - rroshan-rh
